Added code to highlight uvindex based on severity. Need to add additional styling

--- a/style.css
+++ b/style.css
@@ -26,3 +26,15 @@ img {
   height: auto;
   width: 60px;
 }
+
+.favorable {
+  background-color: green;
+}
+
+.moderate {
+  background-color: yellow;
+}
+
+.severe {
+  background-color: red;
+}
