Added code to save searched cities in local storage and retrieve last city weather information after page refresh

--- a/style.css
+++ b/style.css
@@ -29,12 +29,14 @@ img {
 
 .favorable {
   background-color: green;
+  color: white;
 }
 
 .moderate {
-  background-color: yellow;
+  background-color: orange;
 }
 
 .severe {
   background-color: red;
+  color: white;
 }
